--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>Old Page</title>
      <meta charset="UTF-8" />
-     <meta http-equiv="refresh" content="3; URL=https://vitalikihakim.netlify/" />
+     <meta http-equiv="refresh" content="3; URL=https://vitalikhakim.netlify.app/" />
    </head>
    <body>
-     <p>This page has been moved. If you are not redirected within 3 seconds, click <a href="https://vitalikihakim.netlify/">here</a>homepage.</p>
+     <p>This page has been moved. If you are not redirected within 3 seconds, click <a href="https://vitalikhakim.netlify.app/">here</a>homepage.</p>
    </body>
 </html>
